# authorization_server

./: .gitignore  README.md  main.py  pyproject.toml
app/authorization/: auth.py  bearer.py
app/schemas/: api_schemas.py
conf/: config.yaml
tests/: test_auth.py  test_main.py
