[tool.poetry]
name = "authorization-server"
version = "0.1.0"
description = ""
authors = ["Julian Meijerink <j22.meijerink@gmail.com>"]
readme = "README.md"
packages = [{include = "authorization_server"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
