[tool.poetry]
name = "authorization-server"
version = "0.1.0"
description = ""
authors = ["Julian Meijerink <j22.meijerink@gmail.com>"]
readme = "README.md"
packages = [{include = "authorization_server"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
bcrypt = "^4.0.1"
pytest = "^7.4.1"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
